static/dashboard.css
                                                                            /*----- DASHBOARD STYLING ------ */
                                                                                    /* Primary tags */
/* Base Body Styling */
body 
{
    font-family: "Inter";
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: auto 1fr;
    height: 100vh;
}

/* Base Nav Styling */
nav {
    width: 275px;
    height: 100vh;
    background-color: #262626;
    grid-row: 1 / 3;
}

/* Base Main Styling */
main
{
    grid-column: 2;
    position: relative;
    --overlay-height: 100%;
}

/* Universal Scrollbar styling */
/* This is the scrollbar track (the background) */
::-webkit-scrollbar {
    background-color: #262626; /* Color of the scrollbar track */
    width: 10px;
}
/* This is the draggable scrolling handle */
::-webkit-scrollbar-thumb {
    background-color: #3a3a3a; /* Darker color for the thumb */
}
::-webkit-scrollbar-thumb:hover
{
    background-color: #1d897b;
}

/* This is the (optional) button at the top and bottom of the scrollbar */
::-webkit-scrollbar-button {
    display: none; /* If you don't want to display the buttons */
}

/* universal p tag styling */
p {
    margin: 0 !important;
}
                                                                                    /* Class styling */

/* Header Styling */
.dashboard-header
{
grid-column: 2;
height: 70px;
background-color: #262626;
display: flex;
justify-content: space-between;
}

/* Botton padding for brand*/
.pb
{
 padding-bottom: 0.65rem;
}

.brand-container
{
    height: 70px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #2b2b2b;
    box-shadow: 0 0 18px 0 rgba(0, 0, 0, 0.5); /*WHY CAN"T I SEE THE SHADOW!!*/
}

/* Size for brand */
.navbar-brand
{
    font-size: 26px;
    font-family: "Outfit";
    justify-content: center;
    margin-right: 0px;
}

/* Colors For Brand */
.navbar-brand .brand-style
{
    color: #FFFFFF;
    font-weight: 600;
    padding-left: 15px;
    letter-spacing: 7px;
}

/* Styling for flash notifications */
#flashes {
    position: fixed;
    top:0;
    left: 50%;
    color: white;
    transform: translate(-50%);
    z-index: 1000;
    width: 100vw;
}
.flash {
    padding: 5px;
    opacity: 1;
    transition: opacity 0.6s;
    text-align: center;
  }
.flash-success {
    background-color: #1d897b;
}
.flash-error {
    background-color: #e74c3c;
}

/* OVERLAY FOR ENLARGED IMAGES AND PLOTS */

#overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: rgba(0, 0, 0, 0.7);
    z-index: 1000;
    align-items: center;
    justify-content: center;
}

.enlarged-card 
{
    width: 80%;  /* You can adjust this value */
    height: calc(50% + 20vw); /* You can adjust this value */
    overflow: auto;
}
.enlarged-card .card-container {
    height: 100%;
}
.enlarged-image
{
    width: auto;   /* or any other value that works for you */
    height: 93% !important;
    max-width: none !important;
}

.enlarged-card .histogram-container
{
    transform: scale(1.5);
}

/* background animation */

.changing-bgcolor
{
    background-size: 200% 200%;
    background-image: linear-gradient(45deg, 
    rgb(12, 12, 12) 0%, rgb(12, 12, 12) 25%, 
    rgb(26, 26, 26) 25%, rgb(26, 26, 26) 50%, 
    rgb(48, 48, 48) 50%, rgb(48, 48, 48) 75%, 
    rgb(73, 73, 73) 75%, rgb(73, 73, 73) 100%);
    -webkit-animation: AnimateBG 30s ease infinite;
            animation: AnimateBG 30s ease infinite;
}
@-webkit-keyframes AnimateBG {
    0% {
      background-position: 0% 50%;
    }
    50% {
      background-position: 100% 50%;
    }
    100% {
      background-position: 0% 50%;
    }
  }
  
  @keyframes AnimateBG {
    0% {
      background-position: 0% 50%;
    }
    50% {
      background-position: 100% 50%;
    }
    100% {
      background-position: 0% 50%;
    }
  }

/* Responsive media changes */
@media (max-width: 870px)
{
    nav 
    {
        width: 70px;
        cursor: pointer;
        /* transition: width 0.9s ease */
    }
    nav.expanded
    {
        width: 275px;
    }
    main.nav-expanded
    {
        cursor: pointer;
    }
    main.nav-expanded 
    {
        scrollbar-width: none;
        -ms-overflow-style: none;
    }
    main.nav-expanded::-webkit-scrollbar { 
        width: 0;
        background: transparent;
    }
    main.nav-expanded::before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        height: var(--overlay-height);
        background: rgba(0, 0, 0, 0.7);  /* semi-transparent black */
        display: block;
        z-index: 10;  /* ensure it overlays the content; adjust if necessary */
    }
    .brand-style
    {
        display: none;
    }
    nav.expanded .brand-style
    {
        display: initial;
    }
}
@media (max-width: 578px)
{
    main.nav-expanded .card
    {
        display: none;
    }
}

